Make minor style fixes